# iptv-with-agents

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: architect.md  blockchain-dev.md  frontend-builder.md  security-engineer.md  ux-tester.md
.claude/rules/: rust-style.md  security-policy.md  streaming-conventions.md  testing-standards.md  typescript-style.md
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/models/: channel.rs  epg.rs  mod.rs  playlist.rs
backend/src/routes/: chain.rs  epg.rs  health.rs  mod.rs  playlist.rs
backend/src/services/: channel_checker.rs  epg_parser.rs  iptv_org.rs  m3u_parser.rs  mod.rs
coordination/: BLOCKERS.md  DECISIONS.md  SECURITY_REPORT.md  STATUS.md  TASKS.md
docs/: api-spec.md  architecture.md
docs/decisions/: 001-no-ink-pallets-only.md  002-axum-backend-standalone.md
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: channel.dart
pallets/access-control/: Cargo.toml
pallets/access-control/src/: lib.rs
pallets/playlist-registry/: Cargo.toml
pallets/playlist-registry/src/: lib.rs
pallets/token-gate/: Cargo.toml
pallets/token-gate/src/: lib.rs
scripts/: launch-agents-worktrees.sh  launch-agents.sh  run-all-agents-headless.sh  setup-worktrees.sh
tasks/: blockchain-task.md  frontend-task.md  security-task.md  testing-task.md
web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: package.json
web/__tests__/: setup.ts
web/__tests__/components/: ChannelList.epg.test.tsx  ChannelList.test.tsx  ConnectWallet.test.tsx  CustomPairingModal.test.tsx  EpgOverlay.test.tsx  VideoPlayer.test.tsx
web/__tests__/contexts/: UnifiedAccountContext.test.tsx
web/__tests__/e2e/: epg.spec.ts  security-headers.spec.ts
web/__tests__/hooks/: useEpg.test.ts  useHostAccount.test.ts
web/__tests__/lib/: chain.test.ts  rpc-caller.test.ts  url-sanitizer.test.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: CastButton.tsx  ChannelList.tsx  ConfirmDeleteModal.tsx  ConnectWallet.tsx  EpgOverlay.tsx  LoadFromChainPrompt.tsx  Providers.tsx  SaveToChainButton.tsx  SearchBar.tsx  TransferNotification.tsx  UploadButton.tsx  VideoPlayer.tsx  WalletButton.tsx
web/src/config/: papp.ts
web/src/contexts/: UnifiedAccountContext.tsx  WalletContext.tsx
web/src/hooks/: useChainPlaylist.ts  (+6 more)
(+14 files in other folders)
