[package]
name = "iptv-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
quick-xml = "0.36"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
